# algorithmAndStructure

./: CMakeLists.txt  README.md  main.cpp
char1/: 1.cpp
code/01_array/: classImplementation.cpp  evenLeftOddRight.cpp  reverseStr.cpp
code/02_linkedList/: singlyLL.cpp
